<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/topAppBarContainer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_toast_message_bg"
        android:layout_marginTop="20dp"
        android:translationY="-400dp"
        android:id="@+id/upload_indicator"
        android:padding="10dp">

        <TextView
            android:id="@+id/toast_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/uploading_20_messages"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/toast_message"
            android:id="@+id/loading_ic"
            android:src="@drawable/ic_loading_indicator" />

    </RelativeLayout>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topAppBarContainer"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/plush_green"
            app:titleTextColor="@color/black"
            app:navigationIcon="@drawable/ic_drawer"
            app:navigationIconTint="@color/black"
            app:title="Home"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6.CallSaul" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/home_error_banner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:background="@color/plush_green">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/object_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_warning_icon" />

            <TextView
                android:id="@+id/home_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/object_1"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/oops_looks_like_there_is_a_problem"
                android:textColor="@color/black" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_logo_container"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="200dp"
        >

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_finance_logo_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:id="@+id/home_logo_text"
            android:text="@string/not_there_yet"
            android:textColor="@color/white" />

    </RelativeLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/refresh"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/upload_2"
        android:textColor="@color/black"
        app:icon="@drawable/ic_upload"
        app:iconTint="@color/black" />

</RelativeLayout>